--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* width: 1000px;
-    height: 100px;
-    background: linear-gradient( #838383 50%,#606060 50%,#838383 79%),url(something.png),no-repeat 50% 50%; */
 html,body{
   margin: 0;
 }
@@ -19,16 +16,16 @@ html,body{
 
 /* Navigation bar section */
 .nav-bar{
-  background: linear-gradient( #838383 50%,#606060 50%,#838383 79%),url(something.png),no-repeat 50% 50%;
+  background: linear-gradient( #838383 50%,#606060 50%,#838383 100%),url(something.png),no-repeat 50% 50%;
   border-radius: 5px;
   display: flex;
   height: 36px;
   margin: 0 auto;
-  width: 50%;
+  width: 980px;
   justify-content: space-between;
-  /* padding: 11px 15px 0px 15px; */
   position: relative;
   top: 20px;
+  box-shadow: 0px 1px 3px #606060;
 }
 
 .nav-bar a{
@@ -47,7 +44,9 @@ html,body{
   margin: 3px auto;
   width: 100%;
 }
-
+.nav-bar a:hover{
+  background: url(img/hover_first.png) repeat-x 0 0,url(img/hover_second.png) repeat-y 100% 0,url(img/hover_third.png) repeat-y 0 0 ,rgba(0, 0, 0, .4);
+}
 #apple-icon{
   background: url("img/globalnav_text.svg") no-repeat 50% 0;
 }
@@ -77,6 +76,15 @@ html,body{
 
 #support-text{
   background: url("img/globalnav_text.svg") no-repeat 50% 100%;
+}
+.search-box{
+  padding: 1px 6px;
+}
+.search-box input{
+  width: 106px;
+  margin-top: 5px;
+  border-radius: 12px;
+  height: 19px;
 }
 .thumbnails{
   width: 1440px;
