--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ and (min-device-width : 320px)
 and (max-device-width : 480px) {
   header{
     width: 1024px;
+    height: 100%;
   }
 }
 
@@ -15,7 +16,7 @@ and (max-device-width : 480px) {
   background: url(https://web.archive.org/web/20140301004302im_/http://images.apple.com/v/home/as/images/your_verse_hero_2x.jpg) 41% 100%;
   max-width: 1440px;
   margin: 0 auto;
-  min-height: 540px;
+  min-height: 659px;
   position: relative;
   background-size: 1500px 1315px;
   background-repeat: no-repeat;
@@ -114,7 +115,7 @@ and (max-device-width : 480px) {
   width: 15px;
 }
 .first-main-text{
-  margin: 123px 0px -14px 0px;
+  margin: 182px 0px -14px 0px;
   text-align: center;
 }
 
@@ -142,10 +143,11 @@ and (max-device-width : 480px) {
   overflow: hidden;
 }
 footer{
-  font-size: 12px;
+  font-size: 10px;
   width: 980px;
   margin: 0 auto;
   color: #6e6e6e;
+  font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
 }
 footer a{
   text-decoration: none;
